# fluxpark

./: .gitattributes  .gitignore  LICENSE.txt  dev_environment.yml  pyproject.toml  readme.md
.github/workflows/: ci.yml  publish.yml
docs/: flp_environment.yml  input_data_releases.md  nodata_and_resampling.md
docs/examples/: example_run_rain_etref_constant.py
src/fluxpark/: __init__.py  _logging.py
src/fluxpark/config/: __init__.py  cfg_io.py  fluxpark_config.py
src/fluxpark/io/: __init__.py  raster_tools.py  vector_tools.py
src/fluxpark/postprocessing/: __init__.py  eval_waterbalance.py  post_process.py  raster_to_timeseries.py  write_output.py
src/fluxpark/prepgrids/: __init__.py  interpolation.py  prep_grids.py
src/fluxpark/setup/: __init__.py  core_initialization.py  input_sources.py
src/fluxpark/submodels/: interception.py  rootwateruptake.py
src/fluxpark/utils/: __init__.py  common.py  validate.py
src/fluxpark/workflow/: __init__.py  adapters.py  compute_fluxes.py  loopstate.py  ports.py  runner.py
tests/: test_cfg_io.py  test_common.py  test_etref.py  test_eval_waterbalance.py  test_import.py  test_input_sources.py  test_interception.py  test_logging.py  test_post_process.py  test_provenance.py  test_raster_to_timeseries.py  test_raster_tools.py  test_rootwateruptake.py  test_soilevaporation.py  test_validate.py
